@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-12-14T08:12:45Z",
-  "count_outdated" : 1510,
-  "uniques_outdated" : 823,
-  "count" : 1520,
+  "timestamp" : "2023-12-15T00:46:59Z",
+  "count_outdated" : 1513,
+  "uniques_outdated" : 825,
+  "count" : 1521,
   "uniques" : 830,
   "clones" : [
-    {
-      "timestamp": "2023-11-30T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 1, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2023-12-04T00:00:00Z",
       "count": 1,
@@ -52,9 +43,9 @@
     },
     {
       "timestamp": "2023-12-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
