@@ -1,12 +1,7 @@
 {
-  "count": 9,
-  "uniques": 3,
+  "count": 8,
+  "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2023-11-30T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2023-12-04T00:00:00Z",
       "count": 1,
@@ -29,7 +24,7 @@
     },
     {
       "timestamp": "2023-12-14T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
